info & small css adjustments

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Résumé</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
@@ -87,7 +89,16 @@
                     <div class="skills">
                         <h3 class="skills__header">Skills</h3>
                         <p class="skills__text">
-                            Problem solving, Continuous Learning, Team Collaboration
+                            Problem solving, Continuous Learning, Team Collaboration, English (C1 - Advanced),
+                            Javascript / TypeScript,
+                            React/Redux,
+                            Node.js / Express / MongoDB,
+                            Git/Github/Jira / Swagger,
+                            Photoshop/Figma,
+                            REST API,
+                            Webpack/Parcel,
+                            CSS3/HTML5/Wordpress,
+                            Responsive Design
                         </p>
                     </div>
                 </div>
@@ -100,17 +111,17 @@
                             <h3 class="experiences__header">Experience</h3>
                             <div class="experiences__company">
                                 <div class="experiences__company-header">
-                                    <span class="experiences__company-header-durability">2005-Present</span>
-                                    <h3 class="experiences__company-header-name">Binary Studio</h3>
+                                    <span class="experiences__company-header-durability">2019-Present</span>
+                                    <h3 class="experiences__company-header-name">Templatemonster.com</h3>
                                 </div>
 
                                 <div class="experiences__company-project">
-                                    <span class="experiences__company-project-role">Full-Stack Developer</span>
-                                    <h3 class="experiences__company-project-name">Hooman project</h3>
+                                    <span class="experiences__company-project-role">Senior technical support
+                                        engineer</span>
                                     <ul class="experiences__company-project-responsibilities">
-                                        <li>Backend Architecture</li>
+                                        <li>CMS systems</li>
                                         <li>Frontend Development</li>
-                                        <li>API Integration</li>
+                                        <li>Databases Maintenance</li>
                                         <li>Code Maintenance</li>
                                     </ul>
                                 </div>
@@ -123,16 +134,16 @@
                             <div class="additional-info__education">
                                 <h3 class="additional-info__education-header">Education</h3>
                                 <div class="additional-info__education-university">
-                                    <span class="additional-info__education-university-durability">2021</span>
+                                    <span class="additional-info__education-university-durability">2023</span>
                                     <h3 class="additional-info__education-university-speciality">
                                         Full-Stack Development
                                     </h3>
                                     <p class="additional-info__education-university-name">
-                                        Binary Studio Academy
+                                        GOIT Full-Stack Development Course
                                     </p>
                                 </div>
                             </div>
-                            
+
                             <div class="additional-info__languages">
                                 <h3 class="additional-info__languages-header">Languages</h3>
                                 <p class="additional-info__languages-item">English</p>
